@@ -45,16 +45,18 @@ class ConnectionManager implements Watcher {
   private final SolrZkClient client;
 
   private final OnReconnect onReconnect;
+  private final BeforeReconnect beforeReconnect;
 
   private volatile boolean isClosed = false;
 
-  public ConnectionManager(String name, SolrZkClient client, String zkServerAddress, int zkClientTimeout, ZkClientConnectionStrategy strat, OnReconnect onConnect) {
+  public ConnectionManager(String name, SolrZkClient client, String zkServerAddress, int zkClientTimeout, ZkClientConnectionStrategy strat, OnReconnect onConnect, BeforeReconnect beforeReconnect) {
     this.name = name;
     this.client = client;
     this.connectionStrategy = strat;
     this.zkServerAddress = zkServerAddress;
     this.zkClientTimeout = zkClientTimeout;
     this.onReconnect = onConnect;
+    this.beforeReconnect = beforeReconnect;
     reset();
   }
 
@@ -84,7 +86,9 @@ class ConnectionManager implements Watcher {
     } else if (state == KeeperState.Expired) {
       connected = false;
       log.info("Our previous ZooKeeper session was expired. Attempting to reconnect to recover relationship with ZooKeeper...");
-      
+      if (beforeReconnect != null) {
+        beforeReconnect.command();
+      }
       try {
         connectionStrategy.reconnect(zkServerAddress, zkClientTimeout, this,
             new ZkClientConnectionStrategy.ZkUpdate() {
